<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:focusable="true">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_weight="1">
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:padding="10dip">
            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:background="@drawable/circular_bead_back_yellow" android:layout_marginBottom="5dip">
                <TextView
                    android:id="@+id/txtDate_Act_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dip"
                    android:text="12月份"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                <TextView
                    android:id="@+id/txtUserName_Act_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:text="当前帐号:atrclimk" />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <TableLayout
                    android:id="@+id/tableLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" android:layout_weight="1" android:background="@drawable/circular_bead_back" android:paddingLeft="15dip" android:paddingTop="13dip">
                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/txtIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtIn"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <TextView
                            android:id="@+id/txtInMoney_Act_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10000"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <TextView
                            android:id="@+id/txtYuan1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtYuan"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                        <TextView
                            android:id="@+id/txtOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtOut"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <TextView
                            android:id="@+id/txtOutMoney_Act_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="7000"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <TextView
                            android:id="@+id/txtYuan2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtYuan"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                        <TextView
                            android:id="@+id/txtBudget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtBudget"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <TextView
                            android:id="@+id/txtBudgetMoney_Act_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="5000"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <TextView
                            android:id="@+id/txtYuan3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtYuan"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </TableRow>
                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                        <TextView
                            android:id="@+id/txtBudgetBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtBudgetBalance"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <TextView
                            android:id="@+id/txtBudgetBalanceMoney_Act_main"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4000"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                        <TextView
                            android:id="@+id/txtYuan4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txtYuan"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </TableRow>
                </TableLayout>
                <RelativeLayout
                    android:id="@+id/relativeLayout7"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dip">
                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/widget_battery_bg" />
                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/widget_battery_overlayer" />
                </RelativeLayout>
            </LinearLayout>
            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:paddingBottom="10dip" android:paddingTop="5dip">
                <TextView
                    android:id="@+id/txtBudgetPro_Act_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/txtBudgetPro"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <ProgressBar
                    android:id="@+id/proBudget_Act_main"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1" />
            </TableRow>
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" android:layout_weight="1">
                <Button
                    android:id="@+id/btnNewAccount_Act_main"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="20dip"
                    android:text="@string/btnNewAccount" android:layout_weight="1"/>
                <ListView
                    android:id="@+id/listviewJournal_Act_main"
                    android:layout_width="fill_parent"
                    android:layout_height="206dip"
                    android:layout_marginTop="10dip"
                    android:scrollbars="none" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="60dip" android:clipToPadding="true" android:background="@drawable/main_nav_bar" android:layout_gravity="bottom">
        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/imgStream_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:cropToPadding="false"
                android:focusable="true"
                android:scrollY="6dip"
                android:src="@drawable/main_yeartrans_btn" />
            <TextView
                android:id="@+id/txtStream_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dip"
                android:text="@string/txtStream"
                android:textColor="@android:color/white" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/imgAccount_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:scrollY="6dip"
                android:src="@drawable/main_account_btn" />
            <TextView
                android:id="@+id/txtAccount_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dip"
                android:text="贷款"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/imgReport_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:scrollY="6dip"
                android:src="@drawable/main_report_btn" />
            <TextView
                android:id="@+id/txtReport_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dip"
                android:text="@string/txtxReport"
                android:textColor="@android:color/white" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/imgBudgetBottom_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:scrollY="6dip"
                android:src="@drawable/main_budget_btn" />
            <TextView
                android:id="@+id/txtBudgetBottom_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dip"
                android:text="@string/txtBudgetBottom"
                android:textColor="@android:color/white" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/imgConfig_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:scrollY="6dip"
                android:src="@drawable/main_setting_btn" />
            <TextView
                android:id="@+id/txtConfig_Act_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dip"
                android:text="@string/txtConfig"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>